; ModuleID = '/home/carl/AnghaBench/sway/swaybar/tray/extr_host.c_finish_host.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/tray/extr_host.c_finish_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaybar_host = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @finish_host(%struct.swaybar_host* %0) #0 {
  %2 = alloca %struct.swaybar_host*, align 8
  store %struct.swaybar_host* %0, %struct.swaybar_host** %2, align 8
  %3 = load %struct.swaybar_host*, %struct.swaybar_host** %2, align 8
  %4 = getelementptr inbounds %struct.swaybar_host, %struct.swaybar_host* %3, i32 0, i32 2
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.swaybar_host*, %struct.swaybar_host** %2, align 8
  %9 = getelementptr inbounds %struct.swaybar_host, %struct.swaybar_host* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @sd_bus_release_name(i32 %7, i32 %10)
  %12 = load %struct.swaybar_host*, %struct.swaybar_host** %2, align 8
  %13 = getelementptr inbounds %struct.swaybar_host, %struct.swaybar_host* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @free(i32 %14)
  %16 = load %struct.swaybar_host*, %struct.swaybar_host** %2, align 8
  %17 = getelementptr inbounds %struct.swaybar_host, %struct.swaybar_host* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @free(i32 %18)
  ret void
}

declare dso_local i32 @sd_bus_release_name(i32, i32) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
